--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "cat.trollblocknet.tba_android_beta_12"
-        minSdkVersion 15
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -31,4 +31,14 @@ dependencies {
     implementation files('libs/junit.jar')
     implementation files('libs/rabbitmq-client.jar')
     implementation files('libs/rabbitmq-client-tests.jar')
+    implementation ('com.twitter.sdk.android:twitter:3.3.0@aar') {
+        transitive = true
+    }
+}
+
+android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
