--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "cat.trollblocknet.tba_android_beta_12"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 12
+        versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -23,6 +23,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -31,7 +32,7 @@ dependencies {
     implementation files('libs/junit.jar')
     implementation files('libs/rabbitmq-client.jar')
     implementation files('libs/rabbitmq-client-tests.jar')
-    implementation ('com.twitter.sdk.android:twitter:3.3.0@aar') {
+    implementation('com.twitter.sdk.android:twitter:3.3.0@aar') {
         transitive = true
     }
 }
