--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cat.trollblocknet.tba_android_beta_13">
+    package="cat.trollblocknet.tba_android_beta">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,14 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SettingsActivity"
+            android:name="cat.trollblocknet.tba_android_beta.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName="cat.trollblocknet.tba_android_beta.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="cat.trollblocknet.tba_android_beta_13.MainActivity" />
+                android:value="cat.trollblocknet.tba_android_beta.MainActivity" />
         </activity>
-        <activity android:name=".HandleShareAction">
+        <activity android:name="cat.trollblocknet.tba_android_beta.HandleShareAction">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -29,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="cat.trollblocknet.tba_android_beta.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
